fixed ugly overflow on step e

--- a/react-app/src/components/Progress/Progress.css
+++ b/react-app/src/components/Progress/Progress.css
@@ -9,3 +9,7 @@
         justify-content: center;
     align-items: center;
 } */
+
+.routine-section h1{
+    font-size: 2em;
+}
